--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
     </ul>
     <section class="cover">
       <img class="cover__background" src="./images/cover-trains.jpg" alt="Несколько поездов на рельсах">
-      <div class="cover__container">
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
         </p>
-      </div>
+      </a>
     </section>
   </main>
   <footer class="footer">
